Commit3 All subtasks complete